# ai-development-research-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/api/: app.py
app/auth/: api_key.py
app/config/: settings.py
app/dependencies/: container.py
app/exceptions/: __init__.py  application.py  base.py  validation.py
app/prompts/development/: __init__.py  api_documentation_prompt.py  bug_report_prompt.py  code_review_prompt.py  register.py
app/registry/: __init__.py  prompt_registry.py  resource_registry.py  tool_registry.py
app/resources/utility/: __init__.py  capability_resource.py  health_resource.py  register.py  server_info_resource.py
app/schemas/: git.py
app/schemas/filesystem/: __init__.py  create_file.py  delete_file.py  edit_file.py  list_directory.py  read_file.py
app/schemas/utility/: __init__.py  capabilites.py  echo.py  health.py  ping.py  server_info.py  uuid.py
app/server/: app.py  bootstrap.py  lifespan.py
app/services/development/: APIDocumentationService.py  __init__.py
app/services/git/: __init__.py  git_service.py
app/services/utility/: __init__.py  capability_service.py  echo_service.py  health_service.py  ping_service.py  server_info_service.py  uuid_service.py
app/telemetry/: audit.py  debug_execution.py  decorators.py  logging.py  logging_config.py
app/tools/: tool_registry.py
app/tools/filesystem/: create_file_tool.py  delete_file_tool.py  edit_file_tool.py  list_directory_tool.py  read_file_tool.py  register.py
app/tools/git/: __init__.py  (+5 more)
tests/unit/: test_server.py
(+36 files in other folders)
